--- a/app/src/main/res/layout/fragment_sort_order_bottom_sheet_dialog.xml
+++ b/app/src/main/res/layout/fragment_sort_order_bottom_sheet_dialog.xml
@@ -36,24 +36,37 @@
             app:layout_constraintStart_toStartOf="@+id/sortTypeGroup"
             app:layout_constraintTop_toTopOf="parent" />
 
-    <View
-        android:id="@+id/divider"
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:layout_marginTop="8dp"
-        android:background="@color/black"
-        android:backgroundTint="@color/black"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/sortOrderHeaderTextView" />
+        <View
+            android:id="@+id/divider1"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_marginTop="8dp"
+            android:background="@color/black"
+            android:backgroundTint="@color/black"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/sortOrderHeaderTextView" />
+
+        <View
+            android:id="@+id/divider2"
+            android:layout_width="1dp"
+            android:layout_height="0dp"
+            android:layout_marginHorizontal="16dp"
+            android:background="@color/black"
+            android:backgroundTint="@color/black"
+            android:orientation="vertical"
+            app:layout_constraintBottom_toBottomOf="@+id/sortByRadioGroup"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/divider1" />
 
         <RadioGroup
             android:id="@+id/sortTypeGroup"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="16dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/divider">
+            app:layout_constraintStart_toEndOf="@+id/divider2"
+            app:layout_constraintTop_toBottomOf="@+id/divider1">
 
             <RadioButton
                 android:id="@+id/ascendingRadioButton"
@@ -74,7 +87,7 @@
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="16dp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/divider">
+            app:layout_constraintTop_toBottomOf="@+id/divider1">
 
             <RadioButton
                 android:id="@+id/titleRadioButton"
