--- a/app/src/main/res/menu/menu_my_locations_fragment.xml
+++ b/app/src/main/res/menu/menu_my_locations_fragment.xml
@@ -1,9 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+
     <item
         android:id="@+id/menuSort"
         android:title="@string/sort"
         android:icon="@drawable/ic_baseline_sort_32"
-        app:showAsAction="always"/>
+        app:showAsAction="ifRoom"/>
+
+    <item
+        android:id="@+id/menuAdd"
+        android:title="@string/add"
+        android:icon="@drawable/ic_baseline_add_32"
+        app:showAsAction="never"/>
+
 </menu>
