--- a/app/src/main/res/menu/menu_my_routes_fragment.xml
+++ b/app/src/main/res/menu/menu_my_routes_fragment.xml
@@ -3,9 +3,15 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
+        android:id="@+id/menuSort"
+        android:title="@string/sort"
+        android:icon="@drawable/ic_baseline_sort_32"
+        app:showAsAction="ifRoom"/>
+
+    <item
         android:id="@+id/menuAdd"
         android:title="@string/add"
         android:icon="@drawable/ic_baseline_add_32"
-        app:showAsAction="always"/>
+        app:showAsAction="never"/>
 
 </menu>
