--- a/app/src/main/res/menu/menu_routes_fragment.xml
+++ b/app/src/main/res/menu/menu_routes_fragment.xml
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-
     <item
-        android:id="@+id/menuDelete"
-        android:title="@string/delete"
-        android:icon="@drawable/ic_baseline_delete_32"
-        app:showAsAction="always"/>
-
+        android:id="@+id/menuSort"
+        android:title="@string/sort"
+        android:icon="@drawable/ic_baseline_sort_32"
+        app:showAsAction="ifRoom"/>
 </menu>
